<resources>
    <string name="app_name">Bookworm</string>

    //activity labels
    <string name="search">Search</string>
    <string name="book_details">Book Details</string>

    <string name="searching_google">Searching on Google books…</string>
    <string name="book_error">Book contains errors and can not be seeing the details, we are sorry</string>
    <string name="permission_required">Camera permission is required to continue</string>
    <string name="camera_msg">Point the camera at the barcode</string>
    <string name="no_internet">Internet connection is required!</string>

    <string name="error">Something went wrong. Sorry</string>
    <string name="ok">OK</string>

    // Fragment Search
    <string name="title">Title</string>
    <string name="title_hint">Ex. Harry Potter, Don Quixote…</string>
    <string name="author">Author</string>
    <string name="author_hint">Ex. Herman Melville, Marcel Proust…</string>
    <string name="isbn">ISBN</string>
    <string name="isbn_hint">Ex. 9783161484100</string>
    <string name="text_required">Please insert a book title, author or ISBN</string>
    <string name="book_not_found">Book not found on Google repository</string>

    // Activity Book Details
    <string name="by">by</string>
    <string name="isbn_code_10">ISBN-10:</string>
    <string name="isbn_code_13">ISBN-13:</string>
    <string name="isbn_code_other">OTHER:</string>
    <string name="publisher">Publisher:</string>
    <string name="published">Published:</string>
    <string name="page_number">Number of pages:</string>
    <string name="description">Description</string>
    <string name="n_a">N/A</string>
    <string name="open_info_google">See more on Google</string>
    <string name="link_book_not_available">Book link not available</string>
</resources>
